# mcp-wger

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
test/: conftest.py  test_client.py  test_exercises.py  test_nutrition.py  test_templates.py  test_tracking.py  test_user.py  test_workouts.py
tools/: client.py  exercises.py  nutrition.py  templates.py  tracking.py  user.py  workouts.py
