[project]
name = "fastmcp-wger"
version = "0.1.0"
description = "FastMCP server for the wger self-hosted fitness tracker"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-wger = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["tools", "server.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
addopts = "--cov=tools --cov-report=term-missing"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
]
